--- a/index.html
+++ b/index.html
@@ -1,20 +1,22 @@
 <!DOCTYPE html>
 <html>
-  <body>
-    <title> Survey Form</title>
-
-<h1 id="title">Hello </h1>
-<p id="description"> Hello World</p>  
-<form id="survey-form"><br>
- <label id="name-label">Name <input type="text" placeholder="Put your name" id="name"/></label><br>
- <label id="email-label">Email<input 
- type="text" placeholder ="Put your email"
- id="email"/></label><br>
-<label id="number-label">Number<input 
- type="text" placeholder ="Put your number"
- id="number"/></label><br>
-  
-<input id="email" type="email"/> 
-<input id="number"min="1" max="5" type="number"/> 
-
-</form>
+  <head>
+    <title>Survey Form</title>
+    </head>
+    <body>
+     <h1> Hello</h1>
+     <p> WELCOME to the website</p>
+     
+       <main>
+<form id="Survey Form">
+  <label for="name" id= "name-label">Your Name</label>
+  <input id="Name"type="text"required>
+  <input type="submit">
+  <br>
+  <label for ="email" id= "email-label">Your email</label>
+  <input id="Email"type="email"required>
+   <input type="submit">
+  <br>
+<label for="number" id= "number-label">Yor Number</label>
+<input id="Number" min="1" max= "10" type ="number"required>
+ <input type="submit">
